<resources>
    <string name="logout">Logout</string>
    <string name="app_name">Insta Coffee</string>
    <string name="logo_description">App\'s Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_sign_up"><u>Or Sign Up</u></string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login"><u>Or Login</u></string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="signout">Signout</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="reser_pw_instructions">Instructions to reset password has been sent to your e-mail address</string>
    <string name="change_password">Change Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="password_has_been_chaged">Your password has been changed successfully!</string>
    <string name="password_has_been_changed">Your password has been changed successfully!</string>
    <string name="confirmation_email_message">A confirmation email has been sent to your email address</string>
    <string name="verify_email_message">Please verify your email</string>
    <string name="title_activity_welcome2">WelcomeActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="favourites">Favourites</string>
    <string name="menu_item_image">Menu Item Image</string>
    <string name="coffee_image">Coffee Image</string>
    <string name="dollar_sign">Dollar Sign</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="quantity">Quantity: </string>
    <string name="price">Price:</string>
    <string name="no_items_cart">There Are No Items in the Cart</string>
    <string name="remove_item_from_cart">Remove Item from cart</string>
    <string name="removed">Removed</string>
    <string name="total">Total: $</string>
    <string name="order">Order</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="order_placed">Your Order Has Been Placed!</string>
    <string name="cart_is_empty">Your Cart is empty!</string>
    <string name="update_your_order">Update Your pending order</string>
    <string name="order_history">Order History</string>
    <string name="time">Time</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from Favourites</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="your_favourite_coffee_items">Favourite Coffee</string>
    <string name="your_order_has_been_confirmed">Your Order has been confirmed</string>
    <string name="information_coffee_conferences">Information about Latest Coffee Conferences</string>
    <string name="news_about_coffee_events">News about Coffee events</string>
    <string name="custom_order">Custom Order</string>
    <string name="acidity">Acidity</string>
    <string name="smooth">Smooth</string>
    <string name="zero_percent">0%</string>
    <string name="next">Next</string>
    <string name="weight">Weight</string>
    <string name="rich">Rich</string>
    <string name="light">Light</string>
    <string name="bright">Bright</string>
    <string name="flavor">Flavor</string>
    <string name="soft">Soft</string>
    <string name="bold">Bold</string>
    <string name="roast">Roast</string>
    <string name="dark">Dark</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="please_check_connection">Please check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="retrying">Retrying...</string>
    <string name="not_more_than_four">You cannot add more than four favourite items</string>
    <string name="press_this_button_to_see_items_in_your_cart">Press this button to see items in your cart</string>
    <string name="add_item_in_cart">Press this button to add this item in cart</string>
</resources>
