<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_cup"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_list"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_change_pw"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favorite_black"
            android:title="@string/favourites" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>


</menu>
