<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/change_password_enter_password"

            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/green"
            android:textColorHint="@color/dark_green" />

        <EditText
            android:id="@+id/change_password_confirm_password"

            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/green"
            android:textColorHint="@color/dark_green" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button

            android:id="@+id/change_password_ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/ok" />

        <Button

            android:id="@+id/change_password_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>